--- a/src/main/python/cguis/main_window.ui
+++ b/src/main/python/cguis/main_window.ui
@@ -326,6 +326,12 @@
        </widget>
       </widget>
       <widget class="QWidget" name="result" native="true">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="minimumSize">
         <size>
          <width>0</width>
