--- a/src/main/python/cguis/main_window.ui
+++ b/src/main/python/cguis/main_window.ui
@@ -362,9 +362,7 @@
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionCreate"/>
     <addaction name="actionImport"/>
-    <addaction name="separator"/>
     <addaction name="actionExport"/>
     <addaction name="separator"/>
     <addaction name="actionQuit"/>
@@ -373,7 +371,10 @@
     <property name="title">
      <string>Edit</string>
     </property>
+    <addaction name="actionCreate"/>
     <addaction name="actionExtract"/>
+    <addaction name="separator"/>
+    <addaction name="actionSettings"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -425,6 +426,11 @@
   <action name="actionUpdate">
    <property name="text">
     <string>Update</string>
+   </property>
+  </action>
+  <action name="actionSettings">
+   <property name="text">
+    <string>Settings</string>
    </property>
   </action>
  </widget>
