Repair export formats.

--- a/src/main/python/cguis/design/main_window.ui
+++ b/src/main/python/cguis/design/main_window.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string notr="true">MainWindow</string>
   </property>
   <widget class="QWidget" name="central_widget">
    <property name="sizePolicy">
