--- a/src/main/python/cguis/design/settings_dialog.ui
+++ b/src/main/python/cguis/design/settings_dialog.ui
@@ -1985,7 +1985,7 @@
              </size>
             </property>
             <property name="text">
-             <string>Activate Color</string>
+             <string>Activate color tag</string>
             </property>
            </widget>
           </item>
