--- a/src/main/python/cguis/design/main_window.ui
+++ b/src/main/python/cguis/design/main_window.ui
@@ -46,6 +46,9 @@
     <property name="title">
      <string>File</string>
     </property>
+    <addaction name="actionOpen"/>
+    <addaction name="actionSave"/>
+    <addaction name="separator"/>
     <addaction name="actionImport"/>
     <addaction name="actionExport"/>
     <addaction name="separator"/>
@@ -57,6 +60,7 @@
     </property>
     <addaction name="actionCreate"/>
     <addaction name="actionLocate"/>
+    <addaction name="actionAttach"/>
     <addaction name="separator"/>
     <addaction name="actionSettings"/>
    </widget>
@@ -298,6 +302,21 @@
   <action name="actionResult">
    <property name="text">
     <string>Result</string>
+   </property>
+  </action>
+  <action name="actionAttach">
+   <property name="text">
+    <string>Attach</string>
+   </property>
+  </action>
+  <action name="actionOpen">
+   <property name="text">
+    <string>Open</string>
+   </property>
+  </action>
+  <action name="actionSave">
+   <property name="text">
+    <string>Save</string>
    </property>
   </action>
  </widget>
