--- a/src/main/python/cguis/design/main_window.ui
+++ b/src/main/python/cguis/design/main_window.ui
@@ -103,6 +103,9 @@
      <height>125</height>
     </size>
    </property>
+   <property name="toolTip">
+    <string>Display and modify color set result.</string>
+   </property>
    <property name="allowedAreas">
     <set>Qt::BottomDockWidgetArea|Qt::TopDockWidgetArea</set>
    </property>
@@ -134,6 +137,9 @@
      <height>90</height>
     </size>
    </property>
+   <property name="toolTip">
+    <string>Set harmony rule for color set.</string>
+   </property>
    <property name="allowedAreas">
     <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
    </property>
@@ -157,6 +163,9 @@
      <width>165</width>
      <height>90</height>
     </size>
+   </property>
+   <property name="toolTip">
+    <string>Manipulate files and work area.</string>
    </property>
    <property name="allowedAreas">
     <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
@@ -182,6 +191,9 @@
      <height>90</height>
     </size>
    </property>
+   <property name="toolTip">
+    <string>Set display mode for color set result.</string>
+   </property>
    <property name="allowedAreas">
     <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
    </property>
@@ -200,6 +212,9 @@
      <height>90</height>
     </size>
    </property>
+   <property name="toolTip">
+    <string>Set category and channel for opened graph.</string>
+   </property>
    <property name="allowedAreas">
     <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
    </property>
@@ -217,6 +232,9 @@
      <width>165</width>
      <height>42</height>
     </size>
+   </property>
+   <property name="toolTip">
+    <string>Move and zoom graph and depot content.</string>
    </property>
    <property name="allowedAreas">
     <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
